--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    Hello world
+    <header>
+      <div class="main-container flex align-center justify-between">
+        <img src="/assets/img/logo.png" alt="Maraphone logo" />
+        <div class="flex align-center">
+          <a href="#" class="lang-switcher flex flex-center">العربية</a>
+          <div class="stc-drawer-component"></div>
+        </div>
+      </div>
+    </header>
+    <section
+      class="hero"
+      style="background-image: url(/assets/img/hero-bg.png);"
+    >
+      <div class="main-container flex justify-between">
+        <div class="content">
+          <h1>
+            Keep walking,</br> Achieve the weekly goal,</br> Get in draw to WIN prizes.
+          </h1>
+          <p>
+            Maraphone app gives you weekly moving goal, and gets you in the
+            weekly draw to win valuable prizes.
+          </p>
+          <div class="download-app-btns">
+            <a href="#" style="margin-right: 15px;">
+              <img
+                src="/assets/img/app-store.svg"
+                alt="download app from App store"
+              />
+            </a>
+            <a href="#">
+              <img
+                src="/assets/img/google-play.svg"
+                alt="download app from Google play"
+              />
+            </a>
+          </div>
+        </div>
+        <img class="phone-img"
+          src="/assets/img/phone.png"
+          alt="screenshot of Maraphone mobile app"
+        />
+      </div>
+    </section>
+
+    <script src="https://stc-assets.netlify.com/main.js"></script>
   </body>
 </html>
