What is Maraphone section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <!-- header -->
     <header>
       <div class="main-container flex align-center justify-between">
         <img src="/assets/img/logo.png" alt="Maraphone logo" />
@@ -16,6 +17,7 @@
         </div>
       </div>
     </header>
+    <!-- hero section -->
     <section
       class="hero"
       style="background-image: url(/assets/img/hero-bg.png);"
@@ -50,6 +52,26 @@
         />
       </div>
     </section>
+    <!-- About Maraphone card -->
+    <div class="main-container">
+      <section class="what-is-maraphone">
+        <h5>walk, achieve, win</h5>
+        <h2>What is Maraphone?</h2>
+        <div class="features flex">
+          <div class="card">
+            <img src="/assets/img/smile.svg" alt="smile Emoji">
+            <div class="title">Every step motivates</div>
+            <p>Maraphone app encourage you to walk and get in healthy lifestyle, by offering you weekly walking goals to complete and WIN prizes.</p>
+          </div>
+          <div class="card">
+            <img src="/assets/img/fire.svg" alt="fire icon">
+            <div class="title">Every step counts</div>
+            <p>It gives you personalized weekly moving goal based on your average moving distance for the last 28 days.</p>
+          </div>
+        </div>
+      </section>
+
+    </div>
 
     <script src="https://stc-assets.netlify.com/main.js"></script>
   </body>
