--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
         />
       </div>
     </section>
-    <!-- About Maraphone card -->
+
+    <!-- About Maraphone? -->
     <div class="main-container">
       <section class="what-is-maraphone">
         <h5>walk, achieve, win</h5>
         <h2>What is Maraphone?</h2>
-        <div class="features flex">
+        <div class="flex">
           <div class="card">
             <img src="/assets/img/smile.svg" alt="smile Emoji">
             <div class="title">Every step motivates</div>
@@ -70,7 +71,46 @@
           </div>
         </div>
       </section>
+    </div>
 
+    <!-- Features -->
+    <div class="main-container features">
+      <!-- Weekly Motivation -->
+      <section class="feature">
+        <img src="/assets/img/features/weekly-motivation.svg" alt="Weekly motivation illustration">
+        <div class="content">
+          <h5>FEATURES</h5>
+          <div class="title">Weekly Motivation</div>
+          <p>Through push notifications, Maraphone cheers you on with motivational reminders to encourage you to move towards your weekly goal.</p>
+        </div>
+      </section>
+      <!-- Weekly Goal -->
+      <section class="feature reverse">
+        <img src="/assets/img/features/weekly-goal.svg" alt="Weekly Goal illustration">
+        <div class="content">
+          <h5>FEATURES</h5>
+          <div class="title">Weekly Goal</div>
+          <p>Maraphone creates personalized weekly goals, when you complete your weekly challenge, you get in the draw to WIN the weekly prize.</p>
+        </div>
+      </section>
+      <!-- Chance to win prizes -->
+      <section class="feature">
+        <img src="/assets/img/features/chance-to-win-prizes.svg" alt="Chance to win prizes illustration">
+        <div class="content">
+          <h5>FEATURES</h5>
+          <div class="title">Chance to Win Prizes</div>
+          <p>Maraphone offers weekly prizes for participants who achieves their weekly goals, and lists the top performing users on the app’s leaderboard.</p>
+        </div>
+      </section>
+      <!-- The Leaderboard -->
+      <section class="feature reverse">
+        <img src="/assets/img/features/the-leaderboard.svg" alt="The Leaderboard illustration">
+        <div class="content">
+          <h5>FEATURES</h5>
+          <div class="title">The Leaderboard</div>
+          <p>Actively walking or running? 😃 get on top of the leaderboard among participants, show them who’s the BOSS.</p>
+        </div>
+      </section>
     </div>
 
     <script src="https://stc-assets.netlify.com/main.js"></script>
