FAQs list expanding animation

--- a/index.html
+++ b/index.html
@@ -113,6 +113,26 @@
       </section>
     </div>
 
+    <div class="main-container">
+      <section class="FAQs">
+        <h5>LET US HELP YOU GET STARTED</h5>
+        <h2>FAQs</h2>
+
+        <ul class="FAQs-list">
+          <li>
+            <div class="expansion-panel">
+              <div class="question">How to Register?</div>
+              <p class="answer">
+                The weekly challenge starts on Sunday and ends on Saturday every week, you will get notification when the challenge is started, and with your results when it’s ended
+              </p>
+            </div>
+          </li>
+        </ul>
+        
+      </section>
+    </div>
+
     <script src="https://stc-assets.netlify.com/main.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
