Add stc footer component

--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
             </div>
           </li>
         </ul>
-        
       </section>
     </div>
+    <!-- stc footer -->
+    <div class="stc-footer-component"></div>
 
     <script src="https://stc-assets.netlify.com/main.js"></script>
     <script src="/assets/js/main.js"></script>
