--- a/ar/index.html
+++ b/ar/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maraphone</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
-  <body>
+  <body class="ar">
     <!-- header -->
     <header>
       <div class="main-container flex align-center justify-between">
         <img src="/assets/img/logo.png" alt="Maraphone logo" />
         <div class="flex align-center">
-          <a href="#" class="lang-switcher flex flex-center">العربية</a>
-          <div class="stc-drawer-component"></div>
+          <a href="#" class="lang-switcher flex flex-center">English</a>
+          <div class="stc-drawer-component stc-drawer--ar-lang"></div>
         </div>
       </div>
     </header>
@@ -25,11 +25,10 @@
       <div class="main-container flex justify-between">
         <div class="content">
           <h1>
-            Keep walking,</br> Achieve the weekly goal,</br> Get in draw to WIN prizes.
+            استمر بالمشي</br> حقق الهدف الأسبوعي</br> ادخل السحب على جوائز قيّمة.
           </h1>
           <p>
-            Maraphone app gives you weekly moving goal, and gets you in the
-            weekly draw to win valuable prizes.
+            تطبيق مارافون يعطيك تحدي مشي الأسبوعي، ويدخلك في السحب للفوز بجوائز قيّمة
           </p>
           <div class="download-app-btns">
             <a href="#" style="margin-right: 15px;">
@@ -56,18 +55,18 @@
     <!-- About Maraphone? -->
     <div class="main-container">
       <section class="what-is-maraphone">
-        <h5>walk, achieve, win</h5>
-        <h2>What is Maraphone?</h2>
+        <h5>يمشي ، يحقق ، يفوز</h5>
+        <h2>ما هو تطبيق مارافون؟</h2>
         <div class="flex">
           <div class="card">
             <img src="/assets/img/smile.svg" alt="smile Emoji">
-            <div class="title">Every step motivates</div>
-            <p>Maraphone app encourage you to walk and get in healthy lifestyle, by offering you weekly walking goals to complete and WIN prizes.</p>
+            <div class="title">كل خطوة تحفز</div>
+            <p>اطلقنا تطبيق مارافون لتشجيعك على المشي واتباع أسلوب حياة صحي، من خلال اعطائك أهداف مشي أسبوعية تحققها وتفوز بجوائز قيمة.</p>
           </div>
           <div class="card">
             <img src="/assets/img/fire.svg" alt="fire icon">
-            <div class="title">Every step counts</div>
-            <p>It gives you personalized weekly moving goal based on your average moving distance for the last 28 days.</p>
+            <div class="title">كل خطوة مهمة</div>
+            <p>يقدم لك التطبيق هدف أسبوعي للمشي، بناءً على متوسط مسافة تحركك في آخر 28 يوم، نحصل على هذه البيانات تلقائيًا من تطبيق (Apple Health) لنظام الـ IOS وتطبيق (Samsung Health او Google Fit) لنظام الـ Android.</p>
           </div>
         </div>
       </section>
@@ -79,36 +78,36 @@
       <section class="feature">
         <img src="/assets/img/features/weekly-motivation.svg" alt="Weekly motivation illustration">
         <div class="content">
-          <h5>FEATURES</h5>
-          <div class="title">Weekly Motivation</div>
-          <p>Through push notifications, Maraphone cheers you on with motivational reminders to encourage you to move towards your weekly goal.</p>
+          <h5>مميزات</h5>
+          <div class="title">الحافز الأسبوعي</div>
+          <p>من خلال الإشعارات، يشجعك تطبيق مارافون برسائل تذكير تحفيزية لتحقق هدفك الأسبوعي.</p>
         </div>
       </section>
       <!-- Weekly Goal -->
       <section class="feature reverse">
         <img src="/assets/img/features/weekly-goal.svg" alt="Weekly Goal illustration">
         <div class="content">
-          <h5>FEATURES</h5>
-          <div class="title">Weekly Goal</div>
-          <p>Maraphone creates personalized weekly goals, when you complete your weekly challenge, you get in the draw to WIN the weekly prize.</p>
+          <h5>مميزات</h5>
+          <div class="title">الهدف الأسبوعي</div>
+          <p>يحدد تطبيق مارافون أهداف أسبوعية مخصصة لك، وعند انجازك للتحدي الأسبوعي الخاص بك، تدخل السحب للفوز بالجائزة الأسبوعية.</p>
         </div>
       </section>
       <!-- Chance to win prizes -->
       <section class="feature">
         <img src="/assets/img/features/chance-to-win-prizes.svg" alt="Chance to win prizes illustration">
         <div class="content">
-          <h5>FEATURES</h5>
-          <div class="title">Chance to Win Prizes</div>
-          <p>Maraphone offers weekly prizes for participants who achieves their weekly goals, and lists the top performing users on the app’s leaderboard.</p>
+          <h5>مميزات</h5>
+          <div class="title">فرص الفوز بالجوائز</div>
+          <p>يوفر تطبيق مارافون جوائز أسبوعية للمشاركين اللي يحققون أهدافهم الأسبوعية، والمستخدمين الأعلى أداءً يكونون في قائمة المتصدرين في التطبيق.</p>
         </div>
       </section>
       <!-- The Leaderboard -->
       <section class="feature reverse">
         <img src="/assets/img/features/the-leaderboard.svg" alt="The Leaderboard illustration">
         <div class="content">
-          <h5>FEATURES</h5>
-          <div class="title">The Leaderboard</div>
-          <p>Actively walking or running? 😃 get on top of the leaderboard among participants, show them who’s the BOSS.</p>
+          <h5>مميزات</h5>
+          <div class="title">قائمة المتصدرين</div>
+          <p>تمشي أو تركض بكل نشاط؟ خلك على قمة قائمة المتصدرين من بين المشاركين، وخلهم يشوفون مين الأسطورة!</p>
         </div>
       </section>
     </div>
@@ -116,7 +115,7 @@
     <div class="main-container">
       <section class="FAQs">
         <h5>LET US HELP YOU GET STARTED</h5>
-        <h2>FAQs</h2>
+        <h2>الأسئلة الشائعة</h2>
 
         <ul class="FAQs-list">
           <!-- FAQs list items will be generated dynamically, /assets/js/main.js -->
