Responsive all devices

--- a/ar/index.html
+++ b/ar/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maraphone</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body class="ar">
@@ -31,7 +32,7 @@
             تطبيق مارافون يعطيك تحدي مشي الأسبوعي، ويدخلك في السحب للفوز بجوائز قيّمة
           </p>
           <div class="download-app-btns">
-            <a href="#" style="margin-right: 15px;">
+            <a href="#" style="margin-left: 15px;">
               <img
                 src="/assets/img/app-store.svg"
                 alt="download app from App store"
@@ -57,7 +58,7 @@
       <section class="what-is-maraphone">
         <h5>يمشي ، يحقق ، يفوز</h5>
         <h2>ما هو تطبيق مارافون؟</h2>
-        <div class="flex">
+        <div class="flex justify-between" style="padding-top: 30px">
           <div class="card">
             <img src="/assets/img/smile.svg" alt="smile Emoji">
             <div class="title">كل خطوة تحفز</div>
