--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maraphone</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
@@ -58,7 +59,7 @@
       <section class="what-is-maraphone">
         <h5>walk, achieve, win</h5>
         <h2>What is Maraphone?</h2>
-        <div class="flex">
+        <div class="flex justify-between" style="padding-top: 30px;">
           <div class="card">
             <img src="/assets/img/smile.svg" alt="smile Emoji">
             <div class="title">Every step motivates</div>
