Bugfix: update stc drawer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <img src="/assets/img/logo.png" alt="Maraphone logo" />
         <div class="flex align-center">
           <a href="#" class="lang-switcher flex flex-center">العربية</a>
-          <div class="stc-drawer-component"></div>
+          <!-- <div class="stc-drawer-component"></div> -->
+          <div class="stc-drawer-plugin-element"></div>
         </div>
       </div>
     </header>
@@ -128,6 +129,7 @@
     <div class="stc-footer-component"></div>
 
     <script src="https://stc-assets.netlify.com/main.js"></script>
+    <script data-stc-drawer-language="en" data-stc-drawer-opening-direction="left" src="https://stc-drawer-plugin-cdn.netlify.com/dist/stc-drawer-plugin.min.js"></script>
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
