Add bugHerd script to the body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maraphone</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script type="text/javascript" src="https://www.bugherd.com/sidebarv2.js?apikey=uvu3sxxdxrka1aylotqfca" async="true"></script>
   </head>
   <body>
     <!-- header -->
@@ -129,7 +130,6 @@
     <div class="stc-footer-component"></div>
 
     <script src="https://stc-assets.netlify.com/main.js"></script>
-    <!-- <script data-stc-drawer-language="en" data-stc-drawer-opening-direction="left" src="https://stc-drawer-plugin-cdn.netlify.com/dist/stc-drawer-plugin.min.js"></script> -->
     <script src="/assets/js/main.js"></script>
   </body>
 </html>
