--- a/ar/index.html
+++ b/ar/index.html
@@ -55,7 +55,7 @@
 
     <!-- About Maraphone? -->
     <div class="main-container">
-      <section class="what-is-maraphone">
+      <section class="what-is-maraphone has-animation">
         <h5>يمشي ، يحقق ، يفوز</h5>
         <h2>ما هو تطبيق مارافون؟</h2>
         <div class="flex justify-between" style="padding-top: 30px">
