--- a/ar/index.html
+++ b/ar/index.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="main-container">
-      <section class="FAQs">
+      <section class="FAQs has-animation">
         <h5>خلينا نساعدك تبدأ</h5>
         <h2>الأسئلة الشائعة</h2>
 
