--- a/ar/index.html
+++ b/ar/index.html
@@ -76,7 +76,7 @@
     <!-- Features -->
     <div class="main-container features">
       <!-- Weekly Motivation -->
-      <section class="feature">
+      <section class="feature has-animation">
         <img src="/assets/img/features/weekly-motivation.svg" alt="Weekly motivation illustration">
         <div class="content">
           <h5>مميزات</h5>
@@ -85,7 +85,7 @@
         </div>
       </section>
       <!-- Weekly Goal -->
-      <section class="feature reverse">
+      <section class="feature reverse has-animation">
         <img src="/assets/img/features/weekly-goal.svg" alt="Weekly Goal illustration">
         <div class="content">
           <h5>مميزات</h5>
@@ -94,7 +94,7 @@
         </div>
       </section>
       <!-- Chance to win prizes -->
-      <section class="feature">
+      <section class="feature has-animation">
         <img src="/assets/img/features/chance-to-win-prizes.svg" alt="Chance to win prizes illustration">
         <div class="content">
           <h5>مميزات</h5>
@@ -103,7 +103,7 @@
         </div>
       </section>
       <!-- The Leaderboard -->
-      <section class="feature reverse">
+      <section class="feature reverse has-animation">
         <img src="/assets/img/features/the-leaderboard.svg" alt="The Leaderboard illustration">
         <div class="content">
           <h5>مميزات</h5>
