--- a/en/index.html
+++ b/en/index.html
@@ -78,7 +78,7 @@
     <!-- Features -->
     <div class="main-container features">
       <!-- Weekly Motivation -->
-      <section class="feature">
+      <section class="feature has-animation">
         <img src="/assets/img/features/weekly-motivation.svg" alt="Weekly motivation illustration">
         <div class="content">
           <h5>FEATURES</h5>
@@ -87,7 +87,7 @@
         </div>
       </section>
       <!-- Weekly Goal -->
-      <section class="feature reverse">
+      <section class="feature reverse has-animation">
         <img src="/assets/img/features/weekly-goal.svg" alt="Weekly Goal illustration">
         <div class="content">
           <h5>FEATURES</h5>
@@ -96,7 +96,7 @@
         </div>
       </section>
       <!-- Chance to win prizes -->
-      <section class="feature">
+      <section class="feature has-animation">
         <img src="/assets/img/features/chance-to-win-prizes.svg" alt="Chance to win prizes illustration">
         <div class="content">
           <h5>FEATURES</h5>
@@ -105,7 +105,7 @@
         </div>
       </section>
       <!-- The Leaderboard -->
-      <section class="feature reverse">
+      <section class="feature reverse has-animation">
         <img src="/assets/img/features/the-leaderboard.svg" alt="The Leaderboard illustration">
         <div class="content">
           <h5>FEATURES</h5>
