--- a/ar/index.html
+++ b/ar/index.html
@@ -55,7 +55,7 @@
 
     <!-- About Maraphone? -->
     <div class="main-container">
-      <section class="what-is-maraphone has-animation">
+      <section class="what-is-maraphone">
         <h5>يمشي ، يحقق ، يفوز</h5>
         <h2>ما هو تطبيق مارافون؟</h2>
         <div class="flex justify-between" style="padding-top: 30px">
@@ -114,7 +114,7 @@
     </div>
 
     <div class="main-container">
-      <section class="FAQs has-animation">
+      <section class="FAQs">
         <h5>خلينا نساعدك تبدأ</h5>
         <h2>الأسئلة الشائعة</h2>
 
