--- a/en/index.html
+++ b/en/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <script type="text/javascript" src="https://www.bugherd.com/sidebarv2.js?apikey=uvu3sxxdxrka1aylotqfca" async="true"></script>
   </head>
-  <body>
+  <body class="en">
     <!-- header -->
     <header>
       <div class="main-container flex align-center justify-between">
