Remove `has-animation` classes

--- a/en/index.html
+++ b/en/index.html
@@ -57,7 +57,7 @@
 
     <!-- About Maraphone? -->
     <div class="main-container">
-      <section class="what-is-maraphone has-animation">
+      <section class="what-is-maraphone">
         <h5>walk, achieve, win</h5>
         <h2>What is Maraphone?</h2>
         <div class="flex justify-between" style="padding-top: 30px;">
@@ -116,7 +116,7 @@
     </div>
 
     <div class="main-container">
-      <section class="FAQs has-animation">
+      <section class="FAQs">
         <h5>LET US HELP YOU GET STARTED</h5>
         <h2>FAQs</h2>
 
