--- a/en/index.html
+++ b/en/index.html
@@ -13,10 +13,7 @@
     <header>
       <div class="main-container flex align-center justify-between">
         <img src="/assets/img/logo.png" alt="Maraphone logo" />
-        <div class="flex align-center">
-          <a href="/ar" class="lang-switcher flex flex-center">العربية</a>
-          <div class="stc-drawer-component"></div>
-        </div>
+        <a href="/ar" class="lang-switcher flex flex-center"><span>عربى</span></a>
       </div>
     </header>
     <!-- hero section -->
