--- a/ar/index.html
+++ b/ar/index.html
@@ -12,10 +12,7 @@
     <header>
       <div class="main-container flex align-center justify-between">
         <img src="/assets/img/logo.png" alt="Maraphone logo" />
-        <div class="flex align-center">
-          <a href="/en" class="lang-switcher flex flex-center">English</a>
-          <div class="stc-drawer-component stc-drawer--ar-lang"></div>
-        </div>
+        <a href="/en" class="lang-switcher flex flex-center"><span>English</span></a>
       </div>
     </header>
     <!-- hero section -->
