Update header, Update favicon

--- a/ar/index.html
+++ b/ar/index.html
@@ -11,7 +11,7 @@
     <!-- header -->
     <header>
       <div class="main-container flex align-center justify-between">
-        <img src="/assets/img/logo.png" alt="Maraphone logo" />
+        <img src="/assets/img/logo.svg" alt="Maraphone logo" />
         <a href="/en" class="lang-switcher flex flex-center"><span>English</span></a>
       </div>
     </header>
