--- a/en/index.html
+++ b/en/index.html
@@ -12,7 +12,7 @@
     <!-- header -->
     <header>
       <div class="main-container flex align-center justify-between">
-        <img src="/assets/img/logo.png" alt="Maraphone logo" />
+        <img src="/assets/img/logo.svg" alt="Maraphone logo" />
         <a href="/ar" class="lang-switcher flex flex-center"><span>عربى</span></a>
       </div>
     </header>
