Update what's maraphone section icons

--- a/en/index.html
+++ b/en/index.html
@@ -59,12 +59,12 @@
         <h2>What is Maraphone?</h2>
         <div class="flex justify-between" style="padding-top: 30px;">
           <div class="card">
-            <img src="/assets/img/smile.svg" alt="smile Emoji">
+            <img src="/assets/img/gift.svg" alt="gift Emoji">
             <div class="title">Every step motivates</div>
             <p>Maraphone app encourage you to walk and get in healthy lifestyle, by offering you weekly walking goals to complete and WIN prizes.</p>
           </div>
           <div class="card">
-            <img src="/assets/img/fire.svg" alt="fire icon">
+            <img src="/assets/img/like.svg" alt="like icon">
             <div class="title">Every step counts</div>
             <p>It gives you personalized weekly moving goal based on your average moving distance for the last 28 days.</p>
           </div>
