Update hero section

--- a/ar/index.html
+++ b/ar/index.html
@@ -16,11 +16,12 @@
       </div>
     </header>
     <!-- hero section -->
-    <section
-      class="hero"
-      style="background-image: url(/assets/img/hero-bg.png);"
-    >
+    <section class="hero">
       <div class="main-container flex justify-between">
+        <img class="phone-img"
+        src="/assets/img/phone.png"
+        alt="screenshot of Maraphone mobile app"
+        />
         <div class="content">
           <h1>
             استمر بالمشي</br> حقق الهدف الأسبوعي</br> ادخل السحب على جوائز قيّمة.
@@ -43,10 +44,6 @@
             </a>
           </div>
         </div>
-        <img class="phone-img"
-          src="/assets/img/phone.png"
-          alt="screenshot of Maraphone mobile app"
-        />
       </div>
     </section>
 
@@ -57,12 +54,12 @@
         <h2>ما هو تطبيق مارافون؟</h2>
         <div class="flex justify-between" style="padding-top: 30px">
           <div class="card">
-            <img src="/assets/img/smile.svg" alt="smile Emoji">
+            <img src="/assets/img/gift.svg" alt="gift Emoji">
             <div class="title">كل خطوة تحفز</div>
             <p>اطلقنا تطبيق مارافون لتشجيعك على المشي واتباع أسلوب حياة صحي، من خلال اعطائك أهداف مشي أسبوعية تحققها وتفوز بجوائز قيمة.</p>
           </div>
           <div class="card">
-            <img src="/assets/img/fire.svg" alt="fire icon">
+            <img src="/assets/img/like.svg" alt="like icon" style="transform: rotateY(180deg);">
             <div class="title">كل خطوة مهمة</div>
             <p>يقدم لك التطبيق هدف أسبوعي للمشي، بناءً على متوسط مسافة تحركك في آخر 28 يوم، نحصل على هذه البيانات تلقائيًا من تطبيق (Apple Health) لنظام الـ IOS وتطبيق (Samsung Health او Google Fit) لنظام الـ Android.</p>
           </div>
