--- a/en/index.html
+++ b/en/index.html
@@ -17,11 +17,12 @@
       </div>
     </header>
     <!-- hero section -->
-    <section
-      class="hero"
-      style="background-image: url(/assets/img/hero-bg.png);"
-    >
+    <section class="hero">
       <div class="main-container flex justify-between">
+        <img class="phone-img"
+        src="/assets/img/phone.png"
+        alt="screenshot of Maraphone mobile app"
+        />
         <div class="content">
           <h1>
             Keep walking,</br> Achieve the weekly goal,</br> Get in draw to WIN prizes.
@@ -45,10 +46,6 @@
             </a>
           </div>
         </div>
-        <img class="phone-img"
-          src="/assets/img/phone.png"
-          alt="screenshot of Maraphone mobile app"
-        />
       </div>
     </section>
 
