Add lang-detect script to index, Replace 28 to 30

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
   </head>
   <body>
     <script>
-      window.location.pathname = '/ar/';
+      const getNavigatorLanguage = () => {
+        if (navigator.languages && navigator.languages.length) {
+          return navigator.languages[0];
+        } else {
+          return (
+            navigator.userLanguage ||
+            navigator.language ||
+            navigator.browserLanguage ||
+            'en'
+          );
+        }
+      };
+
+      const languagesPath = {
+        ar: 'ar',
+      };
+
+      const lng = getNavigatorLanguage().split('-')[0];
+      const path = languagesPath[lng] || 'en';
+      window.location.pathname = '/' + path;
     </script>
   </body>
 </html>
